--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,76 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
-
 a {
   color: inherit;
   text-decoration: none;
 }
+h1 {
+  margin: 0px;
+}
+a.active {
+  color: rgb(133, 176, 255);
+  border-bottom-style: solid;
+}
 
-* {
-  box-sizing: border-box;
+nav {
+  display: grid;
+  grid-template-columns: 2fr minmax(500px, 1fr);
+  width: 100%;
+  padding: 10px;
+  background-color: white;
+  position: fixed;
+  top: 0;
+}
+
+.one {
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
+
+li {
+  list-style: none;
+}
+
+.items {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  margin: 0px;
+  place-items: center;
+}
+
+.hamburger {
+  display: none;
+}
+.external {
+  display: none;
+  transition: all 1s ease-in-out;
+}
+
+@media screen and (max-width: 600px) {
+  .items {
+    display: none;
+  }
+  .hamburger {
+    display: flex;
+    justify-content: flex-end;
+    padding: 10px;
+  }
+  .nav {
+    grid-template-columns: 1fr 100px;
+  }
+  .external {
+    transition: display 1s ease-in-out;
+    display: grid;
+    grid-template-rows: repeat(5, 1fr);
+    padding: 10px;
+    gap: 5px;
+  }
+  .nav-button {
+    border-style: none;
+    background-color: transparent;
+    border-radius: 10px;
+    transition: all 0.2s ease-in-out;
+  }
+  .nav-button:hover {
+    background-color: rgb(218, 218, 218);
+  }
 }
